Fix typo in DESTINATARIO_CAPIBARIBE variable

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       DESTINATARIO_SCS: ${{ secrets.DESTINATARIO_SCS }}
       DESTINATARIO_IIR: ${{ secrets.DESTINATARIO_IIR }}
       DESTINATARIO_VIVIANE: ${{ secrets.DESTINATARIO_VIVIANE }}
-      DESTINATARIO_CAPIBERIBE: ${{ secrets.DESTINATARIO_CAPIBERIBE }}
+      DESTINATARIO_CAPIBARIBE: ${{ secrets.DESTINATARIO_CAPIBARIBE }}
 
       
     steps:
